snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-kotlin-tooling-metadata.json.sha512
5951cc11b382a88148b428964f02e17a0781c3c1aea5fe3e0d49770b1ae03ffda0ea8a341a6682f6cea2ee0f28903aba6601e119eed9de8776972f23ea67b26b